--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,22 @@ h1{
     color: #333;
     font-family: calibri;
 }
+
+ul{
+    display:block
+}
+
+.bt-link{
+    display:inline-block;
+    margin-top:20px;
+    color: #fff;
+    font-size: 20px;
+    background-color: #07A;
+    padding: 10px 20px;
+    text-decoration:none;
+    border-radius: 5px;
+    transition:0.30s
+}
+.bt-link:hover{
+    background-color: #09f;
+}
